--- a/03-Simple API/src/main/resources/application.properties
+++ b/03-Simple API/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=demo
 spring.datasource.url=jdbc:postgresql://localhost:5432/database
 spring.datasource.username=postgres
 spring.datasource.password=1816
+server.port=8080
