05 - Base de datos conectada

--- a/05 - Auth and Registration (Spring Security)/src/main/resources/application.properties
+++ b/05 - Auth and Registration (Spring Security)/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/users
+spring.datasource.url=jdbc:postgresql://localhost:5432/registro_usuarios
 spring.datasource.username=postgres
 spring.datasource.password=1816
 server.port=8080
