--- a/05 - Inventary Admin (CRUD, Spring Security, Relational db)/src/main/resources/application.properties
+++ b/05 - Inventary Admin (CRUD, Spring Security, Relational db)/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tienda
 spring.datasource.username=postgres
 spring.datasource.password=1816
 server.port=8080
+spring.security.user.password=Test12345_
