05 - No voy a agregar cosas hasta que no sepa exactamente como funcionan

--- a/05 - Inventary Admin (CRUD, Spring Security, Relational db)/src/main/resources/application.properties
+++ b/05 - Inventary Admin (CRUD, Spring Security, Relational db)/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=1816
 server.port=8080
 spring.security.user.password=Test12345_
+jwt.secret=YOUR_SECRET_KEY
