--- a/05 - Inventary Admin (CRUD, Spring Security, Relational db)/src/main/resources/application.properties
+++ b/05 - Inventary Admin (CRUD, Spring Security, Relational db)/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=1816
 server.port=8080
 spring.security.user.password=Test12345_
 jwt.secret=YOUR_SECRET_KEY
+spring.main.allow-bean-definition-overriding=true
