--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/tienda
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecomerce
 spring.datasource.username=postgres
 spring.datasource.password=1816
 server.port=8080
