--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=1816
 server.port=8080
 spring.security.user.password=Test12345_
 jwt.secret=YOUR_SECRET_KEY
+spring.thymeleaf.check-template-location=false
 spring.main.allow-bean-definition-overriding=true
