05 - Configurado el frontend para que se sirva desde el server

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.security.user.password=Test12345_
 jwt.secret=YOUR_SECRET_KEY
 spring.thymeleaf.check-template-location=false
 spring.main.allow-bean-definition-overriding=true
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
