--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.thymeleaf.check-template-location=false
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
+logging.level.org.thymeleaf=DEBUG
